src/main/java/com/example/task_app/error/UserNotFoundException.java
package com.example.task_app.error;

public class UserNotFoundException extends RuntimeException {
	
	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

	public UserNotFoundException(Long id) {
		super("User with id " + id + " not found");
	}

}
